--- a/glen/glen.vcxproj
+++ b/glen/glen.vcxproj
@@ -95,6 +95,8 @@
     <ClCompile Include="glen\Window\Window.cpp" />
     <ClCompile Include="glen\System\Startup.cpp" />
     <ClCompile Include="glen\Graphics\Shader.cpp" />
+    <ClCompile Include="glen\Game\Scene.cpp" />
+    <ClCompile Include="Scenes\TestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="glen\Config.hpp" />
@@ -113,6 +115,8 @@
     <ClInclude Include="glen\Window\Window.hpp" />
     <ClInclude Include="glen\System\Startup.hpp" />
     <ClInclude Include="glen\Graphics\Shader.hpp" />
+    <ClInclude Include="glen\Game\Scene.hpp" />
+    <ClInclude Include="Scenes\TestScene.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GL\glfw\glfwdll.def" />
