--- a/glen/glen.vcxproj
+++ b/glen/glen.vcxproj
@@ -66,6 +66,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="glen\Game\Component.cpp" />
+    <ClCompile Include="glen\Game\Entity.cpp" />
+    <ClCompile Include="glen\Graphics\Color.cpp" />
     <ClCompile Include="glen\Graphics\ShaderProgram.cpp" />
     <ClCompile Include="glen\System\Core.cpp" />
     <ClCompile Include="glen\Window\MessageBox.cpp" />
@@ -100,7 +103,10 @@
     <ClCompile Include="Scenes\TestScene.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="glen\Game\Component.hpp" />
+    <ClInclude Include="glen\Game\Entity.hpp" />
     <ClInclude Include="glen\Config.hpp" />
+    <ClInclude Include="glen\Graphics\Color.hpp" />
     <ClInclude Include="glen\Graphics\ShaderProgram.hpp" />
     <ClInclude Include="glen\System\Core.hpp" />
     <ClInclude Include="glen\glen.h" />
