--- a/glen/glen.vcxproj.filters
+++ b/glen/glen.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClCompile Include="glen\System\Time.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="glen\Window\VideoMode.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GL\wglew.h">
@@ -273,6 +276,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="glen\System\Sleep.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="glen\Window\VideoMode.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
