--- a/glen/glen.vcxproj.filters
+++ b/glen/glen.vcxproj.filters
@@ -171,6 +171,9 @@
     <ClCompile Include="glen\System\Transformable.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="glen\Graphics\Model.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GL\wglew.h">
@@ -309,6 +312,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="glen\System\Transformable.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="glen\Graphics\Model.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
